# Zupple

./: .tool-versions  LICENSE  makefile
backend/: .env.example  .gitignore  Cargo.toml
backend/database/: Cargo.toml
backend/database/src/: lib.rs
backend/database/src/models/: user.rs
backend/database/src/repos/: user.rs
backend/migrations/: 20260115154232_user.up.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/extractors/: config.rs  database.rs
backend/src/handlers/: version.rs
backend/src/puzzle/: mod.rs
backend/src/puzzle/kuromasu/: error.rs  generate.rs  grid.rs  mod.rs  solve.rs
backend/src/puzzle/takuzu/: carve.rs  error.rs  generate.rs  mod.rs  solve.rs
scripts/puzzle/: go.mod  main.go  puzzle
scripts/puzzle/binary/: binary.go  binary_test.go  compress.go  compress_test.go  generate.go  grid.go  puzzle.go  puzzle_test.go  solve.go  solve_test.go
scripts/puzzle/crossview/: crossview.go  generate.go  grid.go  line.go  puzzle.go  puzzle_test.go  solve.go  solve_test.go  util.go
ui/: .gitignore  Dockerfile.dev  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  router.tsx
ui/src/components/atoms/: LinkButton.tsx
ui/src/components/molecules/: LoadingSpinner.tsx
ui/src/layout/: AuthLayout.tsx  NavLayout.tsx  PermissionLayout.tsx
ui/src/lib/: utils.ts
ui/src/lib/api/: query.ts  user.ts
ui/src/lib/contexts/: authContext.ts  (+1 more)
ui/src/pages/: 404.tsx  Error.tsx  Forbidden.tsx  Index.tsx  Login.tsx  PermissionExample.tsx
(+10 files in other folders)
