[package]
name = "zupple"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zupple"
path = "src/main.rs"

[workspace]
members = ["database"]

[dependencies]
database = { path = "database" }

axum = "0.8.8"
dotenvy = "0.15.7"
thiserror = "2.0.17"
# serde_json = "1.0.149"
# serde = {version= "1.0.228", features = ["derive"]}
tracing = { version = "=0.1", default-features = false }
tracing-subscriber = { version = "=0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
tokio = { version = "1.49.0", default-features = false, features = [
    "rt-multi-thread",
    "signal",
    "process",
] }
tower-http = { version = "0.6.6", default-features = false, features = [
    "trace",
    "compression-zstd",
    "cors",
] }
